Add dev dependency: ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,8 @@ boglehead = "boglehead:main"
 [build-system]
 requires = ["uv_build>=0.8.15,<0.9.0"]
 build-backend = "uv_build"
+
+[dependency-groups]
+dev = [
+    "ruff>=0.12.12",
+]
