--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ select = [
     "E",    # pycodestyle errors
     "F",    # Pyflakes
     "I",    # isort (import sorting)
-#    "N",    # pep8-naming
+    "N",    # pep8-naming
     "UP",   # pyupgrade (Python modernization)
 #    "S",    # bandit (security issues)
     "B",    # flake8-bugbear (best practices)
@@ -58,7 +58,7 @@ select = [
     "T201", # Disallow `print`
     "C",    # Code complexity checks
     # "D",    # Docstrings checks
-    "ANN",  # Annotations checks
+    # "ANN",  # Annotations checks
     "UP",  # pyupgrade
 ]
 
